--- a/package.json
+++ b/package.json
@@ -8,36 +8,43 @@
     "url": "https://github.com/thriveweb/yellowcake"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "dom-form-serializer": "^1.0.7",
-    "gatsby": "^2.17.7",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-google-tagmanager": "^2.1.15",
-    "gatsby-plugin-manifest": "^2.2.26",
-    "gatsby-plugin-nprogress": "^2.1.12",
-    "gatsby-plugin-offline": "^3.0.17",
-    "gatsby-plugin-postcss": "^2.1.13",
-    "gatsby-plugin-react-helmet": "^3.1.13",
+    "@reach/router": "^1.3.4",
+    "dom-form-serializer": "^1.0.8",
+    "gatsby": "^2.32.13",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-feed": "^3.14.0",
+    "gatsby-plugin-google-tagmanager": "^2.11.0",
+    "gatsby-plugin-htaccess": "^1.4.0",
+    "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-netlify": "^2.11.1",
+    "gatsby-plugin-netlify-cms": "^4.10.1",
+    "gatsby-plugin-nprogress": "^2.10.0",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-postcss": "^2.3.13",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.2.36",
-    "gatsby-plugin-sitemap": "^2.2.19",
-    "gatsby-remark-images": "^3.1.28",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-remark-images": "^3.11.1",
     "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-remark-responsive-iframe": "^2.2.25",
-    "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-remark": "^2.6.32",
-    "gatsby-transformer-sharp": "^2.3.2",
-    "gatsby-transformer-yaml": "^2.2.15",
-    "google-map-react": "^1.1.5",
-    "lodash": "^4.17.15",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-yaml": "^2.11.0",
+    "google-map-react": "^1.1.7",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "modern-normalize": "^0.5.0",
-    "node-sass": "^4.9.0",
+    "netlify-cms-app": "^2.15.58",
+    "node-sass": "^4.14.1",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-feather": "^2.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-feather": "^2.0.9",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0"
@@ -57,7 +64,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "del-cli": "^3.0.0",
+    "del-cli": "^3.0.1",
     "prettier": "^1.18.2"
   }
 }
